--- a/app/core/email/templates/email.html
+++ b/app/core/email/templates/email.html
@@ -2,12 +2,14 @@
     <div style="width: 50%">
         <h2
             style='box-sizing:border-box;margin-top:8px!important;margin-bottom:0;font-size:24px;font-weight:400!important;line-height:1.25!important;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji"!important; text-align:center'>
-            Here's your TimViecNow launch code, {{ email }}
+            Chào {{ full_name }},
+            <br>
+            Bên dưới là mã xác minh của bạn:
         </h2>
         <div
             style="box-sizing:border-box;font-family:Roboto; display: inline-block; text-align: center; padding: 20px; border: 1px solid #fff; margin: 20px 0">
             <div style="box-sizing:border-box;font-size:16px!important;font-family:Roboto">
-                Continue signing up for TimViecNow by entering the code below:
+                Đây là mã xác thực để {{ title }} của bạn. Đừng chia sẻ mã này với bất kỳ ai khác.
             </div>
             <div
                 style='box-sizing:border-box;color:#24292e!important;display:block;background-color:#eaf5ff;border-radius:6px;padding:2px 6px;margin: 20px 0;font:300 48px "SFMono-Regular",Consolas,"Liberation Mono",Menlo,monospace'>
@@ -19,7 +21,14 @@
                 Open TVNow
             </a>
         </div>
-        <div style="text-align: start;">Once completed, you can start using TimViec Now's many features for your
-            business.</div>
+        <div style="text-align: start;">
+            <p style="font-size: 14px; color: #6c757d; margin-top: 20px;">
+                Nếu bạn không yêu cầu mã xác minh này, bạn có thể bỏ qua email này.
+            </p>
+            <p style="font-size: 14px; color: #6c757d;">
+                Trân trọng,<br>
+                TVNow
+            </p>
+        </div>
     </div>
 </div>
